@@ -1,3 +1,4 @@
+ - Add function mesh.move(u) for moving mesh according to displacement function
  - Add macro dolfin_not_implemented()
  - Add new interpolate() function for interpolation of user-defined function to discrete
  - Make _function_space protected in Function
